src/objects/Helpdesk__c.object
<CustomObject>
    <description>SFDC Tickets</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>Intranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person the ticket is assigned to</description>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>HelpdesksAT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the person requesting help desk ticket</description>
        <label>Caller</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Helpdesks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <defaultValue>$User.FirstName  &amp; &apos; &apos; &amp;  $User.LastName</defaultValue>
        <label>Closed By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walk-in</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Operations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Detail description of request/issue</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HDNumber__c</fullName>
        <description>Help desk ticket number</description>
        <displayFormat>INC{0000000}</displayFormat>
        <label>HD Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bug Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super User Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Education</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Caller__r.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <picklist>
            <picklistValues>
                <fullName>Cancelled by Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate Incident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved by Caller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solved (Permanent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solved (Work Around)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Incident Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending on User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Start Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending User Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Vendor Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Helpdesk</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helpdesks</pluralLabel>
    <recordTypes>
        <fullName>Assigned_Help_Desk</fullName>
        <active>true</active>
        <description>Assigned Help Desk Incident</description>
        <label>Assigned Help Desk</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Help_Desk</fullName>
        <active>true</active>
        <description>New Help Desk Incident</description>
        <label>New Help Desk</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>